# BMR-Protocols

Concrete_Efficiency_Improvements_to_Multiparty_Garbling_with_an_Honest_Majority/: .gitignore  5adder5bits  BMRPassive.out  CMakeLists.txt  build.sh  parties  parties.conf
Concrete_Efficiency_Improvements_to_Multiparty_Garbling_with_an_Honest_Majority/3Party/: 5adder5bits.circ  adderP1
Concrete_Efficiency_Improvements_to_Multiparty_Garbling_with_an_Honest_Majority/MATRIX/: build.sh  parties  run.sh
Concrete_Efficiency_Improvements_to_Multiparty_Garbling_with_an_Honest_Majority/OTExtnsion/: main.cpp  myDefs.h  secCompMultiParty.cpp
Concrete_Efficiency_Improvements_to_Multiparty_Garbling_with_an_Honest_Majority/circgen/: 03adder10bits.circ  05adder11bits.circ  07adder13bits.circ  09adder13bits.circ  11adder14bits.circ  13adder14bits.circ  15adder15bits.circ  17adder15bits.circ  19adder16bits.circ  21adder16bits.circ  23adder16bits.circ  25adder16bits.circ  circuitsyn.py  run.py
Concrete_Efficiency_Improvements_to_Multiparty_Garbling_with_an_Honest_Majority/util/: MatrixMeasurement.h
Efficient_Scalable_Constant-Round_MPC_via_Garbled_Circuits/: .gitignore  README.md
Efficient_Scalable_Constant-Round_MPC_via_Garbled_Circuits/DDHbasedBMROnline/: CMakeLists.txt  HomOnlineTest.out  README.md
